[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Tuukka Laitinen <8557415+tuukkalai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
jsonpickle = "~1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
